Source/WebKit/GPUProcess/webrtc/RemoteSampleBufferDisplayLayer.cpp
@@ -52,7 +52,7 @@ RemoteSampleBufferDisplayLayer::RemoteSampleBufferDisplayLayer(GPUConnectionToWe
     , m_identifier(identifier)
     , m_connection(WTFMove(connection))
     , m_sampleBufferDisplayLayer(LocalSampleBufferDisplayLayer::create(*this))
-    , m_videoFrameObjectHeap(m_gpuConnection.videoFrameObjectHeap())
+    , m_sharedVideoFrameReader(&m_gpuConnection.videoFrameObjectHeap())
 {
     ASSERT(m_sampleBufferDisplayLayer);
 }
@@ -119,42 +119,9 @@ void RemoteSampleBufferDisplayLayer::pause()
     m_sampleBufferDisplayLayer->pause();
 }
 
-void RemoteSampleBufferDisplayLayer::enqueueSample(RemoteVideoFrameReadReference&& sample)
+void RemoteSampleBufferDisplayLayer::enqueue(SharedVideoFrame&& frame)
 {
-    auto mediaSample = m_videoFrameObjectHeap->retire(WTFMove(sample), defaultTimeout);
-    if (!mediaSample) {
-        // In case of GPUProcess crash, we might enqueue previous GPUProcess samples, ignore them.
-        return;
-    }
-    ASSERT(is<MediaSampleAVFObjC>(mediaSample));
-    if (!is<MediaSampleAVFObjC>(mediaSample))
-        return;
-
-    auto& avfMediaSample = downcast<MediaSampleAVFObjC>(*mediaSample);
-    MediaSampleAVFObjC::setAsDisplayImmediately(avfMediaSample);
-    m_sampleBufferDisplayLayer->enqueueSample(avfMediaSample);
-}
-
-void RemoteSampleBufferDisplayLayer::enqueueSampleCV(WebCore::RemoteVideoSample&& remoteSample)
-{
-    RefPtr<MediaSample> sample;
-    if (!remoteSample.surface()) {
-        auto pixelBuffer = m_sharedVideoFrameReader.read();
-        if (!pixelBuffer)
-            return;
-
-        sample = MediaSampleAVFObjC::createImageSample(WTFMove(pixelBuffer), remoteSample.rotation(), remoteSample.mirrored(), remoteSample.time());
-    } else {
-        if (!m_imageTransferSession || m_imageTransferSession->pixelFormat() != remoteSample.videoFormat())
-            m_imageTransferSession = ImageTransferSessionVT::create(remoteSample.videoFormat());
-
-        ASSERT(m_imageTransferSession);
-        if (!m_imageTransferSession)
-            return;
-
-        sample = m_imageTransferSession->createMediaSample(remoteSample);
-    }
-
+    auto sample = m_sharedVideoFrameReader.read(WTFMove(frame));
     ASSERT(sample);
     if (!sample)
         return;
